# vala-eip-patterns

./: meson.build  sources.sh
src/: aggregator.vala
